implemented partial ArcGIS caching, export not yet functional

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 GMapCatcher - An offline map viewer
 
+Clone of the original project, which can be found here:
+GMapCatcher - An offline map viewer
 HomePage: http://code.google.com/p/gmapcatcher/
 
