--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+January 28 2015    M.D    <draeger.marco@gmail.com>
+    * 0.8.1.0
+    * Added ESRI ArcGIS tile cache export (exploded)
+
 July 20 2013    H.S    <HelderSepu@gmail.com>
     * 0.8.0.5 - At revision: 1590
     * Fix issue in py2exe that created problems in Win 8
